1.18 update part 3